...
            "state": "translated",
            "value": "相簿"
          }
        }
      }
    },
    "Albums": {
      "localizations": {
        "ar": {
          "stringUnit": {
            "state": "translated",
            "value": "الألبومات"
          }
...
            "state": "translated",
            "value": "音訊"
          }
        }
      }
    },
    "Audiobooks": {
      "localizations": {
        "ar": {
          "stringUnit": {
            "state": "translated",
            "value": "الكتب الصوتية"
          }
...
            "state": "translated",
            "value": "正在連線..."
          }
        }
      }
    },
    "Continue watching": {
      "localizations": {
        "ar": {
          "stringUnit": {
            "state": "translated",
            "value": "تابع المشاهدة"
          }
...
            "state": "translated",
            "value": "KinoSAIL"
          }
        }
      }
    },
    "Library": {
      "localizations": {
        "ar": {
          "stringUnit": {
            "state": "translated",
            "value": "مكتبة"
          }
...
            "state": "translated",
            "value": "媒體"
          }
        }
      }
    },
    "Movies": {
      "localizations": {
        "ar": {
          "stringUnit": {
            "state": "translated",
            "value": "أفلام"
          }
...
            "state": "translated",
            "value": "電影"
          }
        }
      }
    },
    "Music": {
      "localizations": {
        "ar": {
          "stringUnit": {
            "state": "translated",
            "value": "موسيقى"
          }
...
            "state": "translated",
            "value": "關閉"
          }
        }
      }
    },
    "Photos": {
      "localizations": {
        "ar": {
          "stringUnit": {
            "state": "translated",
            "value": "صور"
          }
...
            "state": "translated",
            "value": "玩"
          }
        }
      }
    },
    "Playback": {
      "localizations": {
        "ar": {
          "stringUnit": {
            "state": "translated",
            "value": "تشغيل"
          }
...
            "state": "translated",
            "value": "伺服器名稱"
          }
        }
      }
    },
    "Settings": {
      "localizations": {
        "ar": {
          "stringUnit": {
            "state": "translated",
            "value": "الإعدادات"
          }
...
            "state": "translated",
            "value": "設定"
          }
        }
      }
    },
    "Shows": {
      "localizations": {
        "ar": {
          "stringUnit": {
            "state": "translated",
            "value": "العروض"
          }
...
            "state": "translated",
            "value": "標題"
          }
        }
      }
    },
    "Try again": {
      "localizations": {
        "ar": {
          "stringUnit": {
            "state": "translated",
            "value": "حاول مرة أخرى"
          }
...
